refactor: test event based instead of polling #1384
Co-authored-by: Maxime Vanza Lutonda <mvanzalu@users.noreply.github.com>